--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,25 @@
     font-family: Epilogue, Arial, Helvetica, sans-serif;
 }
 
+html, body{
+    height: 100%;
+    position: relative;
+}
+
 .white-font {
     color: white
 }
+
+/* .main-container {
+    min-height: 100vh; 
+    overflow: hidden;
+    display: block;
+    position: relative;
+    padding-bottom: 100px; 
+   } */
+
+   footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+   }
